--- a/viz_2.Rmd
+++ b/viz_2.Rmd
@@ -111,6 +111,23 @@ weather_df %>%
 ```
 
 
+## Themes
+
+```{r}
+weather_df %>% 
+  ggplot(aes(x = tmin, y = tmax)) + 
+  geom_point(aes(color = name), alpha = .5) + 
+  labs(
+    title = "Temperature plot",
+    x = "Minimum daily temperature (C)",
+    y = "Maxiumum daily temperature (C)",
+    caption = "Data from the rnoaa package") + 
+  viridis::scale_color_viridis(
+    name = "Location", 
+    discrete = TRUE) +
+  theme_minimal() +
+  theme(legend.position = "bottom")
+```
 
 
 
