code for setting options that I'll use in the future.

--- a/viz_2.Rmd
+++ b/viz_2.Rmd
@@ -130,6 +130,30 @@ weather_df %>%
 ```
 
 
+## Setting options -- for all future documents
+
+```{r, eval = FALSE}
+library(tidyverse)
+
+knitr::opts_chunk$set(
+  fig.width = 6,
+  fig.asp = .6, 
+  out.width = "90%"
+)
+
+theme_set(theme_minimal() + theme(legend.position = "bottom"))
+
+options(
+  ggplot2.continuous.colour = "viridis",
+  ggplot2.continuous.fill = "viridis"
+)
+
+scale_colur_discrete = scale_color_viridis_d
+scale_fill_discrete = sclae_fill_viridis_d
+```
+
+
+
 
 
 
