--- a/viz_2.Rmd
+++ b/viz_2.Rmd
@@ -152,6 +152,23 @@ scale_colur_discrete = scale_color_viridis_d
 scale_fill_discrete = sclae_fill_viridis_d
 ```
 
+## Data args in `geom`
+
+```{r}
+central_park = 
+  weather_df %>% 
+  filter(name == "CentralPark_NY")
+
+waikiki = 
+  weather_df %>% 
+  filter(name == "Waikiki_HA")
+
+ggplot(data = waikiki, aes(x = date, y = tmax, color = name)) +
+  geom_point() + 
+  geom_line(data = central_park)
+```
+
+
 
 
 
