--- a/eda.Rmd
+++ b/eda.Rmd
@@ -53,6 +53,45 @@ weather_df %>%
   group_by(name, month)
 ```
 
+## Counting things
+
+count month / name observations
+
+```{r}
+weather_df %>% 
+  group_by(name, month) %>% 
+  summarize(n_obs = n())
+```
+
+we can use `count()`
+
+```{r}
+weather_df %>% 
+  count(name, month, name = "n_obs")
+```
+
+
+***NEVER*** use base R's `table`  --> results not in a data frame, have to pull a variable out of a dataframe
+
+```{r, eval = FALSE}
+weather_df %>% 
+  pull(month) %>% 
+  table()
+```
+
+
+
+other helpful counters
+
+```{r}
+weather_df %>% 
+  group_by(month) %>% 
+  summarize(
+    n_obs = n(), 
+    n_days = n_distinct(date))
+```
+
+
 
 
 
