--- a/eda.Rmd
+++ b/eda.Rmd
@@ -122,6 +122,57 @@ weather_df %>%
 ```
 
 
+## General summaries
+
+You can do lots of summaries. 
+
+```{r}
+weather_df %>% 
+  group_by(name, month) %>% 
+  summarize(
+    mean_tmax = mean(tmax, na.rm = TRUE),
+    mean_prcp = mean(prcp, na.rm = TRUE), 
+    median_tmin = median(tmin, na.rm = TRUE)
+  )
+```
+
+This is a dataframe!So we can make a plot. 
+
+```{r}
+weather_df %>% 
+  group_by(name, month) %>% 
+  summarize(
+    mean_tmax = mean(tmax, na.rm = TRUE),
+    mean_prcp = mean(prcp, na.rm = TRUE), 
+    median_tmin = median(tmin, na.rm = TRUE)
+  ) %>% 
+ggplot(aes(x = month, y = mean_tmax, color = name)) +
+  geom_point() +
+  geom_line()
+```
+
+Suppose you want to summarize many columns -- use across function in dplyr to calculate for many columns
+
+```{r}
+weather_df %>% 
+  group_by(name, month) %>% 
+  summarize(
+    across(prcp:tmin, mean))
+```
+
+Reminder: sometimes your reuslts are easier to read in another format
+
+```{r}
+weather_df %>% 
+  group_by(name, month) %>% 
+  summarize(mean_tmax = mean(tmax)) %>% 
+  pivot_wider(
+    names_from = name,
+    values_from = mean_tmax
+  ) %>% 
+knitr::kable(digits = 1)
+```
+
 
 
 
