--- a/eda.Rmd
+++ b/eda.Rmd
@@ -174,6 +174,44 @@ knitr::kable(digits = 1)
 ```
 
 
+## `group_by` and `mutate`
+
+When grouping, the new mutate function will do it by the groups
+
+```{r}
+weather_df %>% 
+  group_by(name) %>% 
+  mutate(
+    mean_tmax = mean(tmax, na.rm = TRUE),
+    centered_tmax = tmax - mean_tmax
+  ) %>% 
+  ggplot(aes(x = date, y = centered_tmax, color = name)) +
+  geom_point()
+```
+
+
+What about window functions?
+
+Ranking
+```{r}
+weather_df %>% 
+  group_by(name, month) %>% 
+  mutate(temp_rank = min_rank(desc(tmax))) 
+```
+
+Lag
+
+```{r}
+weather_df %>% 
+  group_by(name) %>% 
+  mutate(temp_change = tmax - lag(tmax)) %>% 
+  summarize(
+    temp_change_max = max(temp_change, na.rm = TRUE), 
+    temp_change_sd = sd(temp_change, na.rm = TRUE)
+  )
+```
+
+
 
 
 
